--- a/Color Detection using HSV Color Range.ipynb
+++ b/Color Detection using HSV Color Range.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"image/Color Detection.png\" alt=\"lol\" style=\"height: 475px; width:200px;\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
